// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sx9h9si {
  color: var(--sx-colors-tonal900);
  font-family: var(--sx-fonts-body);
  font-weight: 400;
  margin: 0;
}

.sx9h9si6tbwj--size-sm {
  font-size: var(--sx-fontSizes-sm);
  line-height: 1.53;
}

.sx9h9si6tbwj--size-sm::before {
  content: '';
  margin-bottom: -0.4056em;
  display: table;
}

.sx9h9si6tbwj--size-sm::after {
  content: '';
  margin-top: -0.4056em;
  display: table;
}

.sx9h9si-m6cy5 {
  color: var(--sx-colors-danger);
  margin-top: var(--sx-space-1);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxg6i02 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sxg6i02:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxg6i02[disabled] {
  background-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal700);
  cursor: not-allowed;
}

.sxg6i02hpnso--state-error {
  border: 1px solid var(--sx-colors-danger);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sxg6i02 sxg6i02hpnso--state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <p
        class="sx9h9si sx9h9si6tbwj--size-sm sx9h9si-m6cy5"
      >
        This field is required
      </p>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxg6i02 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sxg6i02:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxg6i02[disabled] {
  background-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal700);
  cursor: not-allowed;
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sxg6i02"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sxh0wga {
  color: var(--sx-colors-tonal800);
  display: block;
  font-family: var(--sx-fonts-body);
  font-weight: 600;
  margin: 0;
}

.sxh0wgaryo8u--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxh0wgaryo8u--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxh0wgaryo8u--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxg6i02 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--sx-colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--sx-fonts-body);
  font-size: var(--sx-fontSizes-md);
  height: var(--sx-sizes-4);
  width: 100%;
  padding: var(--sx-space-3);
  transition: all 100ms ease-out;
}

.sxg6i02:focus {
  border-color: var(--sx-colors-primary);
  outline: none;
}

.sxg6i02[disabled] {
  background-color: var(--sx-colors-tonal300);
  color: var(--sx-colors-tonal700);
  cursor: not-allowed;
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze sx03kze-6obnf"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxh0wga sxh0wgaryo8u--size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="sxg6i02"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
